logan added button tag to index.html to demonstrate a function for an alert and i created an array of the json data within the main.js file so i dont need to worry about source coding when keeping the array in a .json file. commented out the function aler from logan and now need to merge the feature/02 branch into master and create the third branch for the loops

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         found website TheySaidSo.com which is going to help me a lot for this assignment   --> 
         
         
-
+        <button onclick="quote()">Quote</button>
         <div class="quote">
             <blockquote cite="Eleanor Roosevelt">
                 </blockquote>
