got a jquery function that produces a quote by clicking a button and then starts over after the last object in the quotes array is called but i still want to understand it all better

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         found website TheySaidSo.com which is going to help me a lot for this assignment   --> 
         
         
-        <button onclick="quote()">Quote</button>
+        <button id= "button">GetQuote</button>
         <div class="quote">
-            <blockquote cite="Eleanor Roosevelt">
+            <blockquote id="output" cite="Eleanor Roosevelt">
                 </blockquote>
         </div>
 
