changed the get quote button from the bootstrap hollow class to the bootstrap default

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</blockquote>
 		</div>
 		<div class="button">
-		<button id="button" class="btn btn-hollow">Get Quote</button>
+		<button id="button" class="btn btn-default">Get Quote</button>
 		</div>
 
 		<!--        the span below is the attribution code for the site They Said So -->
@@ -49,7 +49,6 @@
 </a></span>
 
 		<!--        end quote       -->
-
 
 	</div>
 
