changed the text on the button and re wrote the loop for the quote

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</blockquote>
 		</div>
 		<div class="button">
-		<button id="button" class="btn btn-default">Get Quote</button>
+		<button id="button" class="btn btn-default">Get a Quote from Eleanor</button>
 		</div>
 
 		<!--        the span below is the attribution code for the site They Said So -->
