--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
 	<!--  bower:css -->
-	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+	<link rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.css' />
 	<!--  endbower  -->
 
 
@@ -56,6 +56,7 @@
 	<!-- bower:js -->
 	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+	<script src="bower_components/angular/angular.js"></script>
 	<!-- endbower -->
 
 
