playing with the angular to get this all to work and show the quotes but cant seem to figure out how to get the quote to show.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 	<div class="container" ng-controller="QuotesCtrl">
 
 		<div class="quote text-center">
-			<blockquote id="output" class="blockquote-reverse" ng-repeat="quote in quotes">{{contents.quote}}
-				<footer><cite title="quoteSource" class="citation">Eleanor Roosevelt</cite>
+			<blockquote id="output" class="blockquote-reverse" ng-repeat="quote in quotes track by $index">{{quotes.contents.quote}}
+				<footer><cite title="quoteSource" class="citation">{{contents.author}}</cite>
 				</footer>
 			</blockquote>
 		</div>
@@ -68,22 +68,22 @@
 	<script src="js/main.js"></script>
 
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-	<script>
-		(function (b, o, i, l, e, r) {
-			b.GoogleAnalyticsObject = l;
-			b[l] || (b[l] =
-				function () {
-					(b[l].q = b[l].q || []).push(arguments)
-				});
-			b[l].l = +new Date;
-			e = o.createElement(i);
-			r = o.getElementsByTagName(i)[0];
-			e.src = '//www.google-analytics.com/analytics.js';
-			r.parentNode.insertBefore(e, r)
-		}(window, document, 'script', 'ga'));
-		ga('create', 'UA-XXXXX-X');
-		ga('send', 'pageview');
-	</script>
+	// <script>
+	// 	(function (b, o, i, l, e, r) {
+	// 		b.GoogleAnalyticsObject = l;
+	// 		b[l] || (b[l] =
+	// 			function () {
+	// 				(b[l].q = b[l].q || []).push(arguments)
+	// 			});
+	// 		b[l].l = +new Date;
+	// 		e = o.createElement(i);
+	// 		r = o.getElementsByTagName(i)[0];
+	// 		e.src = '//www.google-analytics.com/analytics.js';
+	// 		r.parentNode.insertBefore(e, r)
+	// 	}(window, document, 'script', 'ga'));
+	// 	ga('create', 'UA-XXXXX-X');
+	// 	ga('send', 'pageview');
+	// </script>
 </body>
 
 </html>
