playing with the ng repeat directive and got the quote and the author to display successfully but now working on understanding how it all works. removed the track by index from the ng repeat in the index.html to see if it still breaks but it does not break it so dont think i need that.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 	<div class="container" ng-controller="QuotesCtrl">
 
 		<div class="quote text-center">
-			<blockquote id="output" class="blockquote-reverse" ng-repeat="quote in quotes track by $index">{{quotes.contents.quote}}
-				<footer><cite title="quoteSource" class="citation">{{contents.author}}</cite>
+			<blockquote id="output" class="blockquote-reverse" ng-repeat="quote in quotes">{{quote.text}}
+				<footer><cite title="quoteSource" class="citation">{{quote.author}}</cite>
 				</footer>
 			</blockquote>
 		</div>
