commented out the theysaidso attribution text. going to now get the quotes rotator working

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 
 		<!--        the span below is the attribution code for the site They Said So -->
 
-		<span style="z-index:50;font-size:0.9em;">
+		<!-- <span style="z-index:50;font-size:0.9em;"> -->
 			<!--        <img src="http://theysaidso.com/branding/theysaidso.png" height="20" width="20" alt="theysaidso.com"/>-->
-			<a href="http://theysaidso.com" title="Powered by quotes from theysaidso.com" style="color: #9fcc25; margin-left: 4px; vertical-align: middle;">
+			<!-- <a href="http://theysaidso.com" title="Powered by quotes from theysaidso.com" style="color: #9fcc25; margin-left: 4px; vertical-align: middle;"> -->
 				<!-- theysaidso.com-->
-			</a>
-		</span>
+			<!-- </a> -->
+		<!-- </span> -->
 
 		<!--        end quote       -->
 
