deleted the old.js file and going to clean up all the dead code. added the function window around the angular controller to follow best practices techniques. beginning to work with angular flex slider plugin. need to bower install it so that it works.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
 	<div class="container" ng-controller="QuotesCtrl">
 
-		<div class="quote text-center">
-			<blockquote id="output" class="blockquote-reverse" ng-repeat="quote in quotes">{{quote.text}}
+		<div class="quote text-center">  <!-- bootstrap class text-center -->
+			<flex-slider class="carousel" slide="quote in quotes"
+			<blockquote id="output" class="blockquote-reverse">{{quote.text}}
 				<footer>
 					<cite title="quoteSource" class="citation">{{quote.author}}</cite>
 				</footer>
