--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 	<!--  bower:css -->
 	<link rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.css' />
+	<link rel='stylesheet' href='bower_components/flexslider/flexslider.css' />
 	<!--  endbower  -->
 
 
@@ -61,6 +62,8 @@
 	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
+	<script src="bower_components/flexslider/jquery.flexslider.js"></script>
+	<script src="bower_components/angular-flexslider/angular-flexslider.js"></script>
 	<!-- endbower -->
 
 
