changed the text color to black so that text show up behind the white flex slider. need to add oppacity to the flex slider so that backgroup images show through the quote. the quote is showing up when I just have the one object with key and value where key is text and value is the quote itself. now going to see if the quote will show up with the original json data i have. figured out that in order to show the text, not only need to have the ng-src directive bind with double brackets but also need to include the double brackets between the opening and ending element tags

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="quote text-center">  <!-- bootstrap class text-center -->
 			<flex-slider class="carousel" flex-slide="quote in quotes" animation="slide" animation-loop="false" item-width="210" item-margin="5">
 				<li>
-					<p ng-src="{{quote}}"></p>
+					<p ng-src="{{quote.text}}">{{quote.text}}</p>
 			<!-- <blockquote id="output" class="blockquote-reverse" ng-src="{{quote}}">
 				<footer>
 					<cite title="quoteSource" class="citation" ng-src="{{quote.author}}"</cite>
