changed the background image to one of my own. want to now get to work on the background image iteration. added attribute for slideshow speed in milliseconds to the html but not sure if it is working appropriately. deleted a quote from the array because it was a repeat.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<div class="container" ng-controller="QuotesCtrl">
 
-			<flex-slider class="carousel" flex-slide="quote in quotes track by $index" animation="slide" animation="slide" animation-loop="true" item-width="" item-margin="">
+			<flex-slider class="carousel" flex-slide="quote in quotes track by $index" animation="fade" animation-loop="true" slideshowSpeed="7000">
 				<li>
 			<blockquote id="output" class="blockquote-reverse" ng-src="{{quote.contents.quote}}">{{quote.contents.quote}}
 				<footer>
