commented out the background image in the css and trying to see if i can use the flex slider directive on the background image as well. got in the controller above the quote controller and included the appropriate code in the html. pretty sure that this method will not be very affective so need to change it up.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 
 </head>
 
-<body>
+<body ng-controller="ImgCtrl">
+		<flex-slider slide="image in images" animation="slide">
+			<img ng-src="{{image}}" />
+</flex-slider>
 
 	<div class="container" ng-controller="QuotesCtrl">
 
